grid alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ img {
   }
 }
 
-@media screen and (min-width: 972px) {
+@media screen and (min-width: 1200px) {
   .world-stats-center {
     grid-template-columns: repeat(4, 1fr);
   }
